--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"htm": "^3.1.1",
+		"preact": "^10.26.4"
 	}
 }
